--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,20 @@ body {
   margin: 0;
   padding: 0;
 }
+body::-webkit-scrollbar-track {
+  background-color: #222;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: var(--primary);
+}
+
+
 a{
   color: inherit;
 }
